src/test/deca/context/valid/added/indexField.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  int a;
  int b;
  int c;
}

class B extends A{
  int d;
  int b;
  int e;
}

{}
