src/test/deca/context/invalid/added/simple_class_decl.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  int x = 4;
  int x = 3;
}

{}
